--- a/examples/Samples/picker.html
+++ b/examples/Samples/picker.html
@@ -65,7 +65,7 @@
 						{content: "Year", classes: "label"},
 						{kind: "onyx.PickerDecorator", components: [
 							{style: "min-width: 80px;"},
-							{name: "yearPicker", kind: "onyx.FlyweightPicker", rows: 200, onSetupRow: "setupYear", components: [
+							{name: "yearPicker", kind: "onyx.FlyweightPicker", count: 200, onSetupItem: "setupYear", components: [
 								{name: "year"}
 							]}
 						]}
