Panels: layoutKind to arrangerKind

--- a/examples/Samples/tabpanels.html
+++ b/examples/Samples/tabpanels.html
@@ -31,7 +31,7 @@
 					{kind: "onyx.Button", content: "Add", ontap: "addPanel"},
 					{kind: "onyx.Button", content: "Delete", ontap: "deletePanel"}
 				]},
-				{kind: "TabPanels", layoutKind: "CardSlideInArranger", fit: true, index: 3, components: [
+				{kind: "TabPanels", arrangerKind: "CardSlideInArranger", fit: true, index: 3, components: [
 					{content: "0", classes: "panel", caption: "Tab 0"},
 					{kind: "TabPanels", classes: "panel", index: 1, style: "background: red;", caption: "Tab 1 >", components: [
 						{content: "1.0", classes: "panel", style: "background: beige;",caption: "Tab 1.0"},
@@ -50,7 +50,7 @@
 					]},
 					{content: "2", classes: "panel", style: "background: beige;",caption: "Tab 2"},
 					{content: "3", classes: "panel", style: "background: #666;",caption: "Tab 3"},
-					{kind: "TabPanels", layoutKind: "CardSlideInArranger", classes: "panel", index: 2, style: "background: red;", caption: "Tab 4 >", components: [
+					{kind: "TabPanels", arrangerKind: "CardSlideInArranger", classes: "panel", index: 2, style: "background: red;", caption: "Tab 4 >", components: [
 						{content: "4.0", classes: "panel", style: "background: beige;",caption: "Tab 4.0"},
 						{content: "4.1", classes: "panel", style: "background: #666;",caption: "Tab 4.1"},
 						{content: "4.2", classes: "panel", style: "background: magenta;",caption: "Tab 4.2"},
