--- a/examples/Samples/modal-group-test.html
+++ b/examples/Samples/modal-group-test.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
 	<title>onyx modal group test</title>
@@ -115,7 +115,7 @@
 							]}
 						]},
 						{tag: "br"},{tag: "br"},
-						{content: "Picker (floating: broken)"},
+						{content: "Picker (floating)"},
 						{kind: "onyx.MenuDecorator", components: [
 							{name: "pickeree6", content: "1"},
 							{kind: "onyx.Menu", floating: true, classes: "picker floating", onActivate: "pickerChange", picker: "pickeree6", components: [
