--- a/examples/Samples/popup.html
+++ b/examples/Samples/popup.html
@@ -1,10 +1,11 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 <head>
 	<title>onyx popup sample</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
 	<script src="../../../onyx/package.js" type="text/javascript"></script>
+	<script src="../../../layout/package.js" type="text/javascript"></script>
 	<script src="../../../onyx/source/wip-package.js" type="text/javascript"></script>
 </head>
 <style>
