--- a/examples/Contacts/index.html
+++ b/examples/Contacts/index.html
@@ -4,7 +4,7 @@
 	<title>Contacts</title>
 	<!-- -->
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="viewport" content="width=device-width initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	<!-- -->
 	<script src="../../../../enyo/enyo.js" type="text/javascript"></script>
 	<!-- -->
