Menu and picker item select events
Added two events:
onMenuItemSelected - sent when a menu item is selected
onPickerItemSelected - sent when a picker item is selected

The MenuDecorator kind handles the onMenuItemSelected event by closing
the menu (whereas before the menu would stay open on a menu item
select). The PickerDecorator kind does the same, based off it's
inheritance from the MenuDecorator kind, however it also sends a
pickerItemSelected event.

Also updated the menu & picker samples to demonstrate this.

--- a/examples/Samples/menu.html
+++ b/examples/Samples/menu.html
@@ -13,6 +13,9 @@
 			name: "App",
 			kind: "Control",
 			classes: "onyx",
+			handlers: {
+				onMenuItemSelected: "menuItemSelected"
+			},
 			components: [
 				{style: "padding: 10px;", content: "Some popups in a toolbar:"},
 				{kind: "onyx.Toolbar", classes: "onyx-menu-toolbar", components: [
@@ -96,6 +99,7 @@
 							]}
 						]}
 					]},
+					{name:"menuSelection", content: "Menu Item: nothing selected", style: "text-align:center; padding-top:50px"},
 					{style: "height: 1000px;"}
 				]}
 			],
@@ -112,6 +116,9 @@
 			},
 			preventMenuActivate: function() {
 				return true;
+			},
+			menuItemSelected: function(inSender, inEvent) {
+				this.$.menuSelection.setContent("Menu Item: " + inEvent.originator.content + " Selected");
 			}
 		}))({fit: true}).write();
 	</script>
