--- a/examples/Samples/menu.html
+++ b/examples/Samples/menu.html
@@ -14,7 +14,7 @@
 			kind: "Control",
 			classes: "onyx",
 			handlers: {
-				onMenuItemSelected: "menuItemSelected"
+				onSelect: "itemSelected"
 			},
 			components: [
 				{style: "padding: 10px;", content: "Some popups in a toolbar:"},
@@ -117,7 +117,7 @@
 			preventMenuActivate: function() {
 				return true;
 			},
-			menuItemSelected: function(inSender, inEvent) {
+			itemSelected: function(inSender, inEvent) {
 				this.$.menuSelection.setContent("Menu Item: " + inEvent.originator.content + " Selected");
 			}
 		}))({fit: true}).write();
