--- a/examples/Contacts/index.html
+++ b/examples/Contacts/index.html
@@ -189,10 +189,8 @@
 				return true;
 			},
 			removeSelected: function() {
-				for (var l=this.$.list.getSelection().getSelected(), i=l.length-1; i>=0; i--) {
-					if (l[i]) {
-						this._removeItem(i);
-					}
+				for (var i in this.$.list.getSelection().getSelected()) {
+					this._removeItem(i);
 				}
 				this.$.list.getSelection().clear();
 				this.refreshList();
