--- a/examples/Samples/drawer.html
+++ b/examples/Samples/drawer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Fittable Examples</title>
+	<title>Drawer Examples</title>
 	<!-- -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<!-- -->
@@ -50,11 +50,11 @@
 		classes: "box",
 		stretch: true,
 		components: [
-			{content: "FOO<br>FOO", allowHtml: true, classes: "box mtb"},
+			{content: "Above Drawer #1", classes: "box mtb"},
 			{name: "drawer", kind: "onyx.Drawer", components: [
-				{content: "Drawer<br>Drawer<br>Drawer<br>Drawer", allowHtml: true, classes: "box mtb"}
+				{content: "Drawer #1<br>Drawer #1<br>Drawer #1<br>Drawer #1", allowHtml: true, classes: "box mtb"}
 			]},
-			{content: "FOO<br>FOO", allowHtml: true, classes: "box mtb"},
+			{content: "Below Drawer #1<br>Below Drawer #1", allowHtml: true, classes: "box mtb"},
 			{kind: "FittableColumns", fit: true, classes: "box mtb o", ontap: "columnsTap", components: [
 				{content: "111111111111111", classes: "box mlr"},
 				{name: "columnsDrawer", orient: "h", kind: "onyx.Drawer", open: false, components: [
