Add namespaces to all the samples.

--- a/samples/PopupSample.html
+++ b/samples/PopupSample.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Popup Sample</title>
+	<title>onyx.sample.Popup Sample</title>
 	<!-- -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<!-- -->
