--- a/samples/ProgressSample.html
+++ b/samples/ProgressSample.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new ProgressSample({classes: "enyo-unselectable"}).write();
+	new onyx.sample.ProgressSample({classes: "enyo-unselectable"}).write();
 </script>
 </body>
 </html>
