--- a/samples/ButtonGroupSample.html
+++ b/samples/ButtonGroupSample.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new ButtonGroupSample({classes: "enyo-unselectable"}).write();
+	new onyx.sample.ButtonGroupSample({classes: "enyo-unselectable"}).write();
 </script>
 </body>
 </html>
