--- a/samples/ButtonSample.html
+++ b/samples/ButtonSample.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new ButtonSample({classes: "enyo-unselectable"}).write();
+	new onyx.sample.ButtonSample({classes: "enyo-unselectable"}).write();
 </script>
 </body>
 </html>
