--- a/samples/CheckboxSample.html
+++ b/samples/CheckboxSample.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new CheckboxSample({classes: "enyo-unselectable"}).write();
+	new onyx.sample.CheckboxSample({classes: "enyo-unselectable"}).write();
 </script>
 </body>
 </html>
