--- a/samples/GroupboxSample.html
+++ b/samples/GroupboxSample.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new GroupboxSample({classes: "enyo-unselectable"}).write();
+	new onyx.sample.GroupboxSample({classes: "enyo-unselectable"}).write();
 </script>
 </body>
 </html>
