--- a/samples/IconButtonSample.html
+++ b/samples/IconButtonSample.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new IconButtonSample({classes: "enyo-unselectable"}).write();
+	new onyx.sample.IconButtonSample({classes: "enyo-unselectable"}).write();
 </script>
 </body>
 </html>
