--- a/samples/InputSample.html
+++ b/samples/InputSample.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new InputSample({classes: "enyo-unselectable"}).write();
+	new onyx.sample.InputSample({classes: "enyo-unselectable"}).write();
 </script>
 </body>
 </html>
