--- a/samples/SliderSample.html
+++ b/samples/SliderSample.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new SliderSample({classes: "enyo-unselectable"}).write();
+	new onyx.sample.SliderSample({classes: "enyo-unselectable"}).write();
 </script>
 </body>
 </html>
