--- a/samples/ToggleButtonSample.html
+++ b/samples/ToggleButtonSample.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new ToggleButtonSample({classes: "enyo-unselectable"}).write();
+	new onyx.sample.ToggleButtonSample({classes: "enyo-unselectable"}).write();
 </script>
 </body>
 </html>
