--- a/samples/ToolbarSample.html
+++ b/samples/ToolbarSample.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new ToolbarSample({classes: "enyo-unselectable"}).write();
+	new onyx.sample.ToolbarSample({classes: "enyo-unselectable"}).write();
 </script>
 </body>
 </html>
