Fix extra fit:true on Contacts example which prevented scroller from having proper height

--- a/examples/Contacts/index.html
+++ b/examples/Contacts/index.html
@@ -90,7 +90,7 @@
 			name: "App",
 			kind: "FittableRows",
 			components: [
-				{kind: "onyx.MoreToolbar", fit: true, style: "height: 58px;", components: [
+				{kind: "onyx.MoreToolbar", style: "height: 58px;", components: [
 					{kind: "onyx.Button", content: "setup", ontap: "showSetupPopup"},
 					{kind: "onyx.Button", content: "remove selected", ontap: "removeSelected"},
 					{kind: "onyx.InputDecorator", components: [
