--- a/examples/Contacts/index.html
+++ b/examples/Contacts/index.html
@@ -289,7 +289,8 @@
 				onRemove: ""
 			},
 			components: [
-				{name: "avatar", kind: "Image", classes: "avatar"},
+				// set noEvents to true to avoid creating lots of event handlers inside a flyweight
+				{kind: "Image", name: "avatar", classes: "avatar", noEvents: true},
 				{components: [
 					{name: "name"},
 					{name: "title", classes: "description"},
