Update to Menu.js & menu samples
- Removed setActive call when menu items are activated. Found this was
no longer necessary with the current menu implementation (verified with
menu, picker & flyweight picker), plus it was preventing the
'MoreToolbar' from displaying menus.

- Updated menu sample to use more toolbar so it can be displayed on
mobile.

--- a/examples/Samples/menu.html
+++ b/examples/Samples/menu.html
@@ -17,7 +17,7 @@
 			},
 			components: [
 				{style: "padding: 10px;", content: "Some popups in a toolbar:"},
-				{kind: "onyx.Toolbar", classes: "onyx-menu-toolbar", components: [
+				{kind: "onyx.MoreToolbar", classes: "onyx-menu-toolbar", components: [
 					{kind: "onyx.TooltipDecorator", components: [
 						{kind: "onyx.Button", content: "Tooltip"},
 						{kind: "onyx.Tooltip", content: "I'm a tooltip for a button."}
@@ -117,7 +117,14 @@
 				return true;
 			},
 			itemSelected: function(inSender, inEvent) {
-				this.$.menuSelection.setContent("Menu Item: " + inEvent.originator.content + " Selected");
+				//Menu items send an onSelect event with a reference to themselves & any directly displayed content
+				if (inEvent.originator.content){
+					this.$.menuSelection.setContent(inEvent.originator.content + " Selected");			
+				} else if (inEvent.selected){
+					//	Since some of the menu items do not have directly displayed content (they are kinds with subcomponents),
+					//	we have to handle those items differently here.
+					this.$.menuSelection.setContent(inEvent.selected.controlAtIndex(1).content + " Selected");
+				}
 			}
 		}))({fit: true}).write();
 	</script>
