--- a/samples/MoreToolbarSample.html
+++ b/samples/MoreToolbarSample.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>onyx.sample.Popup Sample</title>
+	<title>MoreToolbar Sample</title>
 	<!-- -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<!-- -->
@@ -10,12 +10,12 @@
 	<script src="../../onyx/package.js" type="text/javascript"></script>
 	<!-- -->
 	<link href="sample.css" rel="stylesheet">
-	<script src="PopupSample.js" type="text/javascript"></script>
+	<script src="MoreToolbarSample.js" type="text/javascript"></script>
 	<!-- -->
 </head>
 <body>
 <script type="text/javascript">
-	new onyx.sample.PopupSample({classes: "enyo-unselectable"}).write();
+	new onyx.sample.MoreToolbarSample({classes: "enyo-unselectable"}).write();
 </script>
 </body>
 </html>
