Separate Menu and Tooltip samples, add Spinner sample.  Styling work on Drawer, Menu, Popup samples.

--- a/samples/TooltipSample.html
+++ b/samples/TooltipSample.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Drawer Sample</title>
+	<title>Tooltip Sample</title>
 	<!-- -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<!-- -->
@@ -9,13 +9,13 @@
 	<script src="../../layout/package.js" type="text/javascript"></script>
 	<script src="../../onyx/package.js" type="text/javascript"></script>
 	<!-- -->
-	<link href="DrawerSample.css" rel="stylesheet">	
-	<script src="DrawerSample.js" type="text/javascript"></script>
+	<link href="sample.css" rel="stylesheet">
+	<script src="TooltipSample.js" type="text/javascript"></script>
 	<!-- -->
 </head>
 <body>
 <script type="text/javascript">
-	new onyx.sample.DrawerSample({classes: "enyo-unselectable"}).write();
+	new onyx.sample.TooltipSample({classes: "enyo-unselectable"}).write();
 </script>
 </body>
 </html>
