Added new icon example

--- a/examples/Samples/iconbutton.html
+++ b/examples/Samples/iconbutton.html
@@ -23,6 +23,8 @@
 		new (enyo.kind({
 			name: "App",
 			components: [
+				{tag: "p", content: "Onyx Icon"},
+				{kind: "onyx.Icon", src: "menu-icon-bookmark.png"},
 				{tag: "p", content: "Onyx Icon Button"},
 				{kind: "onyx.IconButton", src: "menu-icon-bookmark.png"},
 				{tag: "p", content: "Grouped Onyx Icon Buttons"},
