--- a/samples/ContextualPopupSample.html
+++ b/samples/ContextualPopupSample.html
@@ -3,13 +3,13 @@
 <head>
 	<title>Contextual Popup Sample</title>
 	<!-- -->
-	<meta name="apple-mobile-web-app-capable" content="yes"/>	
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<!-- -->
 	<script src="../../../enyo/enyo.js" type="text/javascript"></script>
 	<script src="../../layout/package.js" type="text/javascript"></script>
 	<script src="../../onyx/package.js" type="text/javascript"></script>
-	<script src="../package.js" type="text/javascript"></script>		
+	<script src="../package.js" type="text/javascript"></script>
 	<!-- -->
 	<link href="sample.css" rel="stylesheet">
 	<script src="ContextualPopupSample.js" type="text/javascript"></script>
@@ -17,7 +17,7 @@
 </head>
 <body>
 <script type="text/javascript">
-	new onyx.sample.ContextualPopupSample({fit: true, classes: "enyo-unselectable"}).write();
+	new onyx.sample.ContextualPopupSample({fit: true, classes: "enyo-unselectable"}).renderInto(document.body);
 </script>
 </body>
 </html>
