--- a/samples/TableSample.html
+++ b/samples/TableSample.html
@@ -13,6 +13,11 @@
 	<link href="sample.css" rel="stylesheet">
 	<script src="TableSample.js" type="text/javascript"></script>
 	<!-- -->
+	<style>
+		td.negative, th.negative {
+			color: red;
+		}
+	</style>
 </head>
 <body>
 <script type="text/javascript">
